--- a/new 5 html.html
+++ b/new 5 html.html
@@ -4,12 +4,14 @@
 <title>Page Title</title>
 </head>
 <body>
-
 <h1 style="color:green;">My first a heading</h1>
 <img src="jump.jpg" width="300" height="300">
+<img src="best nature.webp" width="300" height="300">
+<img src="foto.jpg" width="300" height="300">
 <p>This is a paragraph.</p>
 <a href="https://www.winner.bg">winner.bg</a>
 <a href="https://www.sportal.bg">sportal.bg</a>
+<a href="https://www.gong.bg">gong.bg</a>
 <p>This is a paragraph.</p>
 <style>
 table, th, td {
@@ -18,21 +20,24 @@ table, th, td {
 </style>
 <table style="width:50%">
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
     <th>Country</th>
+    <th>City</th>
+	<th>Name</th>
+	<th>Address</th>
   <th>Telephone number</th>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
     <td>Germany</td>
-	<td>0878304050</td>
+    <td>Berlin</td>
+    <td>Berg Muler</td>
+	<td>Prager Str. 12</td>
+	<td>+49	7584 6941</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-	 <td>0987121314</td>
+    <td>Belgium</td>
+    <td>Brussels</td>
+    <td>Marc Peeters</td>
+	<td>Rue Joseph II 32</td>
+	 <td>+32 8157 4023</td>
   </tr>
 </table>
 <p>This is a paragraph.</p>
@@ -40,15 +45,20 @@ table, th, td {
 <p>This is some text.</p>
 <hr>
 <h1 style="background-color:DodgerBlue;">Where can I get some?</h1>
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br> If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.<br> All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.<br> It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.<br> The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+<p><div style="background-color:black;color:white;padding:20px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br> If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.<br> All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.<br> It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.<br> The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
 <h2 style="color:red;">This is Heading 2</h2>
 <p>This is some other text.</p>
 <hr>
 <p>
 <h1 style="background-color:DodgerBlue;">Why do we use it?</h1>
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.<br> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.<br> Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+ <h3 style="color:red;">This is Heading 3</h3>
+ <p><strong>This text is important!</strong></p>
+ <h1 style="background-color:DodgerBlue;">Where does it come from?</h1>
  
+<p>Contrary to popular belief, Lorem Ipsum is not simply random text.<br> It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.<br> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.<br> Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC.<br> This book is a treatise on the theory of ethics, very popular during the Renaissance.<br> The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
+The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.<br> Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
 
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
